--- a/src/App.css
+++ b/src/App.css
@@ -1,9 +1,13 @@
+body{
+  background: cornflowerblue;
+}
 .app {
   display: flex;
   justify-content: center;
   align-items: center;
   height: 90vh;
   width: 100%;
+  
 }
 
 .calc-wrapper {
