--- a/src/components/ClearButton.css
+++ b/src/components/ClearButton.css
@@ -9,6 +9,8 @@
   color: #000000;
   flex: 1;
   outline: 1px solid #888888;
+  border-radius: 0 0 25px 25px;
+  outline: none;
 }
 
 .clear-btn:hover{
